--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://sania517.github.io/cra-demo/index.html",
+  "homepage": "http://sania517.github.io/cra-demo/",
   "name": "cra-demo",
   "version": "0.1.0",
   "private": true,
